--- a/thesis/formal/formal.tex
+++ b/thesis/formal/formal.tex
@@ -17,7 +17,7 @@ Finally, we will give semantics for the Herbrand instantiation of a Holmes progr
 The first primary distinction to draw in negation is \emph{strong negation} vs \emph{negation-as-failure}, or NaF.
 Strong negation describes having knowledge that something is not the case, whereas NaF describes knowing that we will never have proof that something is the case.
 This difference is more formally defined by Gelfond and Lifshitz~\cite{strongneg}.\footnote{
-This aricle refers to strong negation as classical negation.
+This article refers to strong negation as classical negation.
 }
 In this work we will focus on negation-as-failure.
 
