--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -91,6 +91,8 @@ The views and opinions of authors expressed herein do not necessarily state or r
 %\end{acknowledgements}
 
 \tableofcontents
+\clearpage
+\listoffigures
 
 \mainmatter
 \input{introduction}
